[package]
name = "btc_lotto_puzzles_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
# Bitcoin cryptography
bitcoin = "0.31"
secp256k1 = { version = "0.28", features = ["rand", "global-context"] }

# Async runtime and HTTP
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Telegram bot framework
teloxide = { version = "0.12", features = ["macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"

# Environment variables
dotenv = "0.15"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding/decoding
hex = "0.4"